--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '../assets/scss/_variables.scss';
 
 
 
@@ -9,7 +10,9 @@
    License: none (public domain)
 */
 
-html,
+html{
+  font-size: 16px;
+}
 body,
 div,
 span,
@@ -145,7 +148,46 @@ q:after {
 }
 
 :root {
-  --foreground-rgb: #181616;
-  --background-start-rgb: #181616;
-  --background-end-rgb: #181616;
+  --foreground-rgb: $color-background;
+  --background-start-rgb: $color-background;
+  --background-end-rgb: $color-background;
+}
+
+.nav-panel{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 33%;
+  border-right: 1px solid $color-secondary;
+  padding-left: 100px;
+  padding-top: 75px;
+  justify-content: start;
+  overflow-x: scroll;
+
+  h1{
+    color: #5D846C;
+  }
+}
+
+.content-panel{
+  align-content: end;
+  height: 100vh;
+  width: 66%;
+  padding: 74px 50px;
+  text-align: start;
+  overflow-y: scroll;
+
+  &__content{
+    margin-top: 25px;
+    text-align: start;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    color: #C6C6C6;
+  }
+}
+
+.h1{
+  font-size: 36px;
+  font-weight: 400;
 }
